--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=biblioteca.spring.email@gmail.com
-spring.mail.password=mbhw wiyo xnxh ezsz
+spring.mail.password=
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
